--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,12 +18,12 @@ jobs:
           print(platform.processor())
         shell: python
 
-  run-windows-commands:
-    runs-on: windows-latest
-    needs: ["run-shell-command"]
-    steps:
-      - name: Directory powershell
-        run: Get-Location
-      - name: Directory bash
-        run: pwd
-        shell: bash
+  # run-windows-commands:
+  #   runs-on: windows-latest
+  #   needs: ["run-shell-command"]
+  #   steps:
+  #     - name: Directory powershell
+  #       run: Get-Location
+  #     - name: Directory bash
+  #       run: pwd
+  #       shell: bash
