--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -6,6 +6,8 @@ env:
 jobs:
   log-env:
     runs-on: ubuntu-latest
+    env:
+      JOB_ENV: Available to all steps in log-env job
     steps:
       - name: Log ENV Variables
         env:
